Implementación de Singleton y Factory. Corrección de eficiencia en PostFix